update jp and fr locale

--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -1,4 +1,4 @@
-﻿skeleton=Squelette
+﻿editor=Editeur
 xml=XML
 textureAtlas=Atlas des textures
 about=A propos de
@@ -11,18 +11,20 @@ import=Importer
 export=Exporter
 frameRate=Fréquence d’images :
 behaviorPanelTitle=Comportement - 
-tweenFrame=Image d’interpolation :
-totalFrame=Nombre total d’images :
+totalFrames=Nombre total d’images :
+switchTweenFrames=Permuter les images d’interpolation :
 keyFrameEase=Accélération image-clé :
 loop=Boucle
 play=Lire
 stop=Arrêt
 bonePanelTitle=Os - 
-tweenTimeScale=Echelle temporelle d’interpolation :
-tweenTimeDelay=Délai d’interpolation :
+totalFramesScale=Nombre total d’images (%) :
+playDelay=Temporisation de lecture (%) :
 importLabel=Importer :
+textureSetting=Paramétrage de la texture
 layoutAlgorithm=Algorithme de présentation :
 size=Taille :
+autoSize=Taille automatique
 padding=Remplissage :
 exportLabel=Exporter :
 allLibraryItems=Tous les éléments de la bibliothèque
@@ -35,12 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML et PNG)
 ZIPwithXMLAndPNGs=Zip (XML et PNG)
 ok=OK
 cancel=Annuler
-importFLAWaitting=Importation en cours...
-importNoElement=Impossible de trouver une armature dans la bibliothèque de Fla {0} !
-importArmatureProgress=Importer l’armature : {0} / {1}
+importFLAWaitting=Importation en cours... &#xA; Patientez jusqu’à ce que l’importation soit terminée.
+importNoElement=Impossible de trouver un squelette dans la bibliothèque de Fla {0}.
+importSkeletonProgress=Importer le squelette : {0} / {1}
 importTextureProgress=Importer la texture : {0} / {1}
 importFileWaitting=Importation en cours...
-importFileError=Import – Echec. &#xA; Erreur de format de données inconnue.
+importFileError=Echec de l’importation. &#xA; Erreur de format de données inconnue.
 importFileProgress=Progression de l’importation : {0} %
 exportWaitting=Exportation en cours... &#xA; Patientez jusqu’à ce que l’exportation soit terminée.
 exportError=Echec de l’exportation. &#xA; Erreur inconnue lors de l’écriture des données.
+contactUsBy=Contactez-nous par {0}
+copyright=Copyright 2012 L’équipe DragonBones et autres contributeurs.
