--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -1,4 +1,4 @@
-﻿skeleton=骨格
+﻿editor=エディター
 xml=XML
 textureAtlas=テクスチャアトラス
 about=情報
@@ -11,18 +11,20 @@ import=読み込み
 export=書き出し
 frameRate=フレームレート :
 behaviorPanelTitle=動作 - 
-tweenFrame=トゥイーンフレーム :
-totalFrame=フレーム合計 :
+totalFrames=フレーム合計 :
+switchTweenFrames=トゥイーンフレームを切り替え :
 keyFrameEase=キーフレームのイーズ :
 loop=ループ
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
-tweenTimeScale=トゥイーン時間スケール :
-tweenTimeDelay=トゥイーン時間遅延 :
+totalFramesScale=合計フレームスケール (%) :
+playDelay=再生ディレイ (%) :
 importLabel=読み込み :
+textureSetting=テクスチャ設定
 layoutAlgorithm=レイアウトアルゴリズム :
 size=サイズ :
+autoSize=AutoSize
 padding=パディング :
 exportLabel=書き出し :
 allLibraryItems=すべてのライブラリアイテム
@@ -35,12 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML および PNG)
 ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
 ok=OK
 cancel=キャンセル
-importFLAWaitting=読み込み中...
-importNoElement=Fla {0} のライブラリにアーマチュアアイテムが見つかりません。
-importArmatureProgress=アーマチュアを読み込み : {0} / {1}
+importFLAWaitting=読み込み中...&#xA; 読込みが終了するまでお待ちください。
+importNoElement=Fla {0} のライブラリに骨格アイテムが見つかりません。
+importSkeletonProgress=骨格を読み込み : {0} / {1}
 importTextureProgress=テクスチャを読み込み : {0} / {1}
 importFileWaitting=読み込み中...
-importFileError=Import 失敗しました。 &#xA; 不明なデータ形式エラーです。
+importFileError=読込みに失敗しました。&#xA; 不明なデータ形式エラーです。
 importFileProgress=読み込みの進行状況 : {0} %
-exportWaitting=書き出し... &#xA; 書き出しが終了するまでお待ちください。
-exportError=書き出しに失敗しました。 &#xA; データの書き込み中に不明なエラーが発生しました。
+exportWaitting=書き出し...&#xA; 書き出しが終了するまでお待ちください。
+exportError=書き出しに失敗しました。&#xA; データの書き込み中に不明なエラーが発生しました。
+contactUsBy={0} で問い合わせ
+copyright=Copyright 2012 DragonBones チームおよびその他の貢献者
