fix language bug

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -37,14 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML and PNG)
 ZIPwithXMLAndPNGs=Zip (XML and PNGs)
 ok=OK
 cancel=Cancel
-importFLAWaitting=Importing... &#xA; Please wait until importing finished.
+importFLAWaitting=Importing...\rPlease wait until importing finished.
 importNoElement=Cannot find any skeleton item in the library of Fla {0}!
 importSkeletonProgress=Import Skeleton: {0} / {1}
 importTextureProgress=Import Texture: {0} / {1}
 importFileWaitting=Importing...
-importFileError=Import failed! &#xA; Unknown data format error!
+importFileError=Import failed!\rUnknown data format error!
 importFileProgress=Import Progress: {0} %
-exportWaitting=Exporting... &#xA; Please wait until exporting finished.
-exportError=Export failed! &#xA; Unknown error on data writing!
+exportWaitting=Exporting...\rPlease wait until exporting finished.
+exportError=Export failed!\rUnknown error on data writing!
 contactUsBy=Contact us by {0}
 copyright=Copyright 2012 The DragonBones team and other contributors.
