--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -37,14 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML et PNG)
 ZIPwithXMLAndPNGs=Zip (XML et PNG)
 ok=OK
 cancel=Annuler
-importFLAWaitting=Importation en cours... &#xA; Patientez jusqu’à ce que l’importation soit terminée.
+importFLAWaitting=Importation en cours...\rPatientez jusqu’à ce que l’importation soit terminée.
 importNoElement=Impossible de trouver un squelette dans la bibliothèque de Fla {0}.
 importSkeletonProgress=Importer le squelette : {0} / {1}
 importTextureProgress=Importer la texture : {0} / {1}
 importFileWaitting=Importation en cours...
-importFileError=Echec de l’importation. &#xA; Erreur de format de données inconnue.
+importFileError=Echec de l’importation.\rErreur de format de données inconnue.
 importFileProgress=Progression de l’importation : {0} %
-exportWaitting=Exportation en cours... &#xA; Patientez jusqu’à ce que l’exportation soit terminée.
-exportError=Echec de l’exportation. &#xA; Erreur inconnue lors de l’écriture des données.
+exportWaitting=Exportation en cours...\rPatientez jusqu’à ce que l’exportation soit terminée.
+exportError=Echec de l’exportation.\rErreur inconnue lors de l’écriture des données.
 contactUsBy=Contactez-nous par {0}
 copyright=Copyright 2012 L’équipe DragonBones et autres contributeurs.
