--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -37,14 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML および PNG)
 ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
 ok=OK
 cancel=キャンセル
-importFLAWaitting=読み込み中...&#xA; 読込みが終了するまでお待ちください。
+importFLAWaitting=読み込み中...\r読込みが終了するまでお待ちください。
 importNoElement=Fla {0} のライブラリに骨格アイテムが見つかりません。
 importSkeletonProgress=骨格を読み込み : {0} / {1}
 importTextureProgress=テクスチャを読み込み : {0} / {1}
 importFileWaitting=読み込み中...
-importFileError=読込みに失敗しました。&#xA; 不明なデータ形式エラーです。
+importFileError=読込みに失敗しました。\r不明なデータ形式エラーです。
 importFileProgress=読み込みの進行状況 : {0} %
-exportWaitting=書き出し...&#xA; 書き出しが終了するまでお待ちください。
-exportError=書き出しに失敗しました。&#xA; データの書き込み中に不明なエラーが発生しました。
+exportWaitting=書き出し...\r書き出しが終了するまでお待ちください。
+exportError=書き出しに失敗しました。\rデータの書き込み中に不明なエラーが発生しました。
 contactUsBy={0} で問い合わせ
 copyright=Copyright 2012 DragonBones チームおよびその他の貢献者
