--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -37,14 +37,14 @@ ZIPwithXMLAndPNG=Zip (XML和PNG)
 ZIPwithXMLAndPNGs=Zip (XML和分开的PNG)
 ok=确定
 cancel=取消
-importFLAWaitting=导入中请稍后... &#xA; 请耐心等待直到导入结束.
+importFLAWaitting=导入中请稍后...\r请耐心等待直到导入结束.
 importNoElement=未在 Fla {0} 库中找到符合骨架结构的元件！
 importSkeletonProgress=导入骨架: {0} / {1}
 importTextureProgress=导入纹理: {0} / {1}
 importFileWaitting=导入中请稍后...
-importFileError=导入失败! &#xA; 未知的数据格式错误!
+importFileError=导入失败!\r未知的数据格式错误!
 importFileProgress=导入进度: {0} %
-exportWaitting=导出中请稍后... &#xA; 请耐心等待直到导出结束.
-exportError=导出失败! &#xA; 文件写入时发生未知错误!
+exportWaitting=导出中请稍后...\r请耐心等待直到导出结束.
+exportError=导出失败!\r文件写入时发生未知错误!
 contactUsBy=通过 {0} 联系我们
 copyright=版权所有 2012 DragonBones团队和其他贡献者保留所有权利.
