add new Main UI

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -2,7 +2,7 @@
 xml=XML
 textureAtlas=Texture Atlas
 about=About
-skeletonList=Skeleton List
+skeleton=Skeleton:
 behaviorList=Behavior List
 boneTree=Bone Tree
 textureList=Texture List
