--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -2,7 +2,7 @@
 xml=XML
 textureAtlas=Atlas des textures
 about=A propos de
-skeletonList=Liste de squelettes
+skeleton=Squelettes:
 behaviorList=Liste de comportements
 boneTree=Arborescence d’os
 textureList=Liste de textures
