--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -2,7 +2,7 @@
 xml=XML
 textureAtlas=テクスチャアトラス
 about=情報
-skeletonList=骨格リスト
+skeleton=骨格:
 behaviorList=動作リスト
 boneTree=ボーンツリー
 textureList=テクスチャリスト
