add ProgressBar for animation saving

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -41,6 +41,8 @@ importFLAWaitting=Importing...\rPlease wait until importing finished.
 importNoElement=Cannot find any skeleton item in the library of Fla {0}!
 importSkeletonProgress=Import Skeleton: {0} / {1}
 importTextureProgress=Import Texture: {0} / {1}
+saveAnimation=Saving...\rPlease wait until Saving finished.
+saveAnimationProgress=Save Animation: {0} / {1}
 importFileWaitting=Importing...
 importFileError=Import failed!\rUnknown data format error!
 importFileProgress=Import Progress: {0} %
