--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -41,6 +41,8 @@ importFLAWaitting=导入中请稍后...\r请耐心等待直到导入结束.
 importNoElement=未在 Fla {0} 库中找到符合骨架结构的元件！
 importSkeletonProgress=导入骨架: {0} / {1}
 importTextureProgress=导入纹理: {0} / {1}
+saveAnimation=保存中请稍后...\r请耐心等待直到保存结束.
+saveAnimationProgress=保存动画: {0} / {1}
 importFileWaitting=导入中请稍后...
 importFileError=导入失败!\r未知的数据格式错误!
 importFileProgress=导入进度: {0} %
