add some icons and translates strings
add some icons and translates strings

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -1,5 +1,6 @@
 ﻿editor=Editor
 xml=XML
+copyBehaviors=Copy Behaviors
 textureAtlas=Texture Atlas
 about=About
 skeleton=Skeleton:
@@ -9,10 +10,14 @@ textureList=Texture List
 boneHighlight=Bone Highlight
 import=Import
 export=Export
+bone=Bone
+behavior=Behavior
+source=Source
+target=Target
 frameRate=Frame Rate:
 behaviorPanelTitle=Behavior - 
-totalFrames=Total Frames:
-switchTweenFrames=Switch Tween Frames:
+totalTimes=Total Times(sec):
+blendingTimes=Blending Times(sec):
 keyFrameEase=Keyframe Ease:
 loop=Loop
 play=Play
@@ -36,6 +41,7 @@ ZIPwithXMLAndSWF=Zip (XML and SWF)
 ZIPwithXMLAndPNG=Zip (XML and PNG)
 ZIPwithXMLAndPNGs=Zip (XML and PNGs)
 ok=OK
+save=Save
 cancel=Cancel
 importFLAWaitting=Importing...\rPlease wait until importing finished.
 importNoElement=Cannot find any skeleton item in the library of Fla {0}!
