--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -1,5 +1,6 @@
 ﻿editor=Editeur
 xml=XML
+copyBehaviors=Copie de comportements
 textureAtlas=Atlas des textures
 about=A propos de
 skeleton=Squelettes:
@@ -9,10 +10,14 @@ textureList=Liste de textures
 boneHighlight=Os surligné
 import=Importer
 export=Exporter
+bone=Os
+behavior=Comportement
+source=Source
+target=Cible
 frameRate=Fréquence d’images :
 behaviorPanelTitle=Comportement - 
-totalFrames=Nombre total d’images :
-switchTweenFrames=Permuter les images d’interpolation :
+totalTimes=Durées totales(sec):
+blendingTimes=Les temps de mélange(sec):
 keyFrameEase=Accélération image-clé :
 loop=Boucle
 play=Lire
@@ -36,6 +41,7 @@ ZIPwithXMLAndSWF=Zip (XML et SWF)
 ZIPwithXMLAndPNG=Zip (XML et PNG)
 ZIPwithXMLAndPNGs=Zip (XML et PNG)
 ok=OK
+save=Sauver
 cancel=Annuler
 importFLAWaitting=Importation en cours...\rPatientez jusqu’à ce que l’importation soit terminée.
 importNoElement=Impossible de trouver un squelette dans la bibliothèque de Fla {0}.
