--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -1,5 +1,6 @@
 ﻿editor=エディター
 xml=XML
+copyBehaviors=コピーの動作
 textureAtlas=テクスチャアトラス
 about=情報
 skeleton=骨格:
@@ -9,10 +10,16 @@ textureList=テクスチャリスト
 boneHighlight=ボーンハイライト
 import=読み込み
 export=書き出し
+bone=ボーン
+behavior=動作
+source=源
+target=目標
 frameRate=フレームレート :
 behaviorPanelTitle=動作 - 
-totalFrames=フレーム合計 :
+totalFrames=タイムズ合計 :
 switchTweenFrames=トゥイーンフレームを切り替え :
+totalTimes=合計時間 (秒):
+blendingTimes=混合時間(秒):
 keyFrameEase=キーフレームのイーズ :
 loop=ループ
 play=再生
@@ -36,6 +43,7 @@ ZIPwithXMLAndSWF=Zip (XML および SWF)
 ZIPwithXMLAndPNG=Zip (XML および PNG)
 ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
 ok=OK
+save=保存
 cancel=キャンセル
 importFLAWaitting=読み込み中...\r読込みが終了するまでお待ちください。
 importNoElement=Fla {0} のライブラリに骨格アイテムが見つかりません。
