--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -1,5 +1,6 @@
 ﻿editor=编辑器
 xml=XML
+copyBehaviors=复制动作
 textureAtlas=纹理集
 about=关于
 skeleton=骨架:
@@ -9,10 +10,16 @@ textureList=纹理列表
 boneHighlight=骨骼高亮
 import=导入
 export=导出
+bone=骨骼
+behavior=动作
+source=源
+target=目标
 frameRate=帧频:
 behaviorPanelTitle=动作 - 
 totalFrames=总帧数:
 switchTweenFrames=切换补间帧数:
+totalTimes=总时间(秒):
+blendingTimes=混合时间(秒):
 keyFrameEase=关键帧缓动:
 loop=循环
 play=播放
@@ -36,6 +43,7 @@ ZIPwithXMLAndSWF=Zip (XML和SWF)
 ZIPwithXMLAndPNG=Zip (XML和PNG)
 ZIPwithXMLAndPNGs=Zip (XML和分开的PNG)
 ok=确定
+save=保存
 cancel=取消
 importFLAWaitting=导入中请稍后...\r请耐心等待直到导入结束.
 importNoElement=未在 Fla {0} 库中找到符合骨架结构的元件！
