refine about window and fix a missed local word

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -40,6 +40,7 @@ PNGwithXML=PNG (XML Merged)
 ZIPwithXMLAndSWF=Zip (XML and SWF)
 ZIPwithXMLAndPNG=Zip (XML and PNG)
 ZIPwithXMLAndPNGs=Zip (XML and PNGs)
+exportscale=Export Scale
 ok=OK
 save=Save
 cancel=Cancel
@@ -55,4 +56,4 @@ importFileProgress=Import Progress: {0} %
 exportWaitting=Exporting...\rPlease wait until exporting finished.
 exportError=Export failed!\rUnknown error on data writing!
 contactUsBy=Contact us by {0}
-copyright=Copyright 2012 The DragonBones team and other contributors.
+copyright=Copyright 2012-2013 The DragonBones team and other contributors.
