--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -40,6 +40,7 @@ PNGwithXML=PNG (XML fusionné)
 ZIPwithXMLAndSWF=Zip (XML et SWF)
 ZIPwithXMLAndPNG=Zip (XML et PNG)
 ZIPwithXMLAndPNGs=Zip (XML et PNG)
+exportscale=exporter échelle
 ok=OK
 save=Sauver
 cancel=Annuler
@@ -53,4 +54,4 @@ importFileProgress=Progression de l’importation : {0} %
 exportWaitting=Exportation en cours...\rPatientez jusqu’à ce que l’exportation soit terminée.
 exportError=Echec de l’exportation.\rErreur inconnue lors de l’écriture des données.
 contactUsBy=Contactez-nous par {0}
-copyright=Copyright 2012 L’équipe DragonBones et autres contributeurs.
+copyright=Copyright 2012-2013 L’équipe DragonBones et autres contributeurs.
