--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -42,6 +42,7 @@ PNGwithXML=PNG (XML 結合)
 ZIPwithXMLAndSWF=Zip (XML および SWF)
 ZIPwithXMLAndPNG=Zip (XML および PNG)
 ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
+exportscale=書き出し スケール
 ok=OK
 save=保存
 cancel=キャンセル
@@ -55,4 +56,4 @@ importFileProgress=読み込みの進行状況 : {0} %
 exportWaitting=書き出し...\r書き出しが終了するまでお待ちください。
 exportError=書き出しに失敗しました。\rデータの書き込み中に不明なエラーが発生しました。
 contactUsBy={0} で問い合わせ
-copyright=Copyright 2012 DragonBones チームおよびその他の貢献者
+copyright=Copyright 2012-2013 DragonBones チームおよびその他の貢献者
