--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -42,6 +42,7 @@ PNGwithXML=PNG (包含XML)
 ZIPwithXMLAndSWF=Zip (XML和SWF)
 ZIPwithXMLAndPNG=Zip (XML和PNG)
 ZIPwithXMLAndPNGs=Zip (XML和分开的PNG)
+exportscale=导出缩放比
 ok=确定
 save=保存
 cancel=取消
@@ -57,4 +58,4 @@ importFileProgress=导入进度: {0} %
 exportWaitting=导出中请稍后...\r请耐心等待直到导出结束.
 exportError=导出失败!\r文件写入时发生未知错误!
 contactUsBy=通过 {0} 联系我们
-copyright=版权所有 2012 DragonBones团队和其他贡献者保留所有权利.
+copyright=版权所有 2012-2013 DragonBones团队和其他贡献者保留所有权利.
