refine a typo Times->Time

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -16,8 +16,8 @@ source=Source
 target=Target
 frameRate=Frame Rate:
 behaviorPanelTitle=Behavior - 
-totalTimes=Total Times(sec):
-blendingTimes=Blending Times(sec):
+totalTime=Total Time(sec):
+blendingTime=Blending Time(sec):
 keyFrameEase=Keyframe Ease:
 loop=Loop
 play=Play
