--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -16,8 +16,8 @@ source=Source
 target=Cible
 frameRate=Fréquence d’images :
 behaviorPanelTitle=Comportement - 
-totalTimes=Durées totales(sec):
-blendingTimes=Les temps de mélange(sec):
+totalTime=Durées totales(sec):
+blendingTime=Les temps de mélange(sec):
 keyFrameEase=Accélération image-clé :
 loop=Boucle
 play=Lire
