--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -18,8 +18,8 @@ frameRate=フレームレート :
 behaviorPanelTitle=動作 - 
 totalFrames=タイムズ合計 :
 switchTweenFrames=トゥイーンフレームを切り替え :
-totalTimes=合計時間 (秒):
-blendingTimes=混合時間(秒):
+totalTime=合計時間 (秒):
+blendingTime=混合時間(秒):
 keyFrameEase=キーフレームのイーズ :
 loop=ループ
 play=再生
