--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -18,8 +18,8 @@ frameRate=帧频:
 behaviorPanelTitle=动作 - 
 totalFrames=总帧数:
 switchTweenFrames=切换补间帧数:
-totalTimes=总时间(秒):
-blendingTimes=混合时间(秒):
+totalTime=总时间(秒):
+blendingTime=混合时间(秒):
 keyFrameEase=关键帧缓动:
 loop=循环
 play=播放
