--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -35,11 +35,14 @@ exportLabel=Export:
 allLibraryItems=All Library Items
 selectedItems=Selected Items
 exportedData=Exported Data(SWF/PNG/Zip)
-SWFwithXML=SWF (XML Merged)
-PNGwithXML=PNG (XML Merged)
+SWFwithDBData=SWF (DBData Merged)
+PNGwithDBData=PNG (DBData Merged)
 ZIPwithXMLAndSWF=Zip (XML and SWF)
 ZIPwithXMLAndPNG=Zip (XML and PNG)
 ZIPwithXMLAndPNGs=Zip (XML and PNGs)
+ZIPwithJSONAndSWF=Zip (JSON and SWF)
+ZIPwithJSONAndPNG=Zip (JSON and PNG)
+ZIPwithJSONAndPNGs=Zip (JSON and PNGs)
 exportscale=Export Scale
 ok=OK
 save=Save
