--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -35,11 +35,14 @@ exportLabel=Exporter :
 allLibraryItems=Tous les éléments de la bibliothèque
 selectedItems=Eléments sélectionnés
 exportedData=Données exportées (SWF/PNG/Zip)
-SWFwithXML=SWF (XML fusionné)
-PNGwithXML=PNG (XML fusionné)
+SWFwithDBData=SWF (DBData fusionné)
+PNGwithDBData=PNG (DBData fusionné)
 ZIPwithXMLAndSWF=Zip (XML et SWF)
 ZIPwithXMLAndPNG=Zip (XML et PNG)
-ZIPwithXMLAndPNGs=Zip (XML et PNG)
+ZIPwithXMLAndPNGs=Zip (XML et PNGs)
+ZIPwithJSONAndSWF=Zip (JSON et SWF)
+ZIPwithJSONAndPNG=Zip (JSON et PNG)
+ZIPwithJSONAndPNGs=Zip (JSON et PNGs)
 exportscale=exporter échelle
 ok=OK
 save=Sauver
