--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -37,11 +37,14 @@ exportLabel=書き出し :
 allLibraryItems=すべてのライブラリアイテム
 selectedItems=選択したアイテム
 exportedData=書き出したデータ (SWF/PNG/Zip)
-SWFwithXML=SWF (XML 結合)
-PNGwithXML=PNG (XML 結合)
+SWFwithDBData=SWF (DBData 結合)
+PNGwithDBData=PNG (DBData 結合)
 ZIPwithXMLAndSWF=Zip (XML および SWF)
 ZIPwithXMLAndPNG=Zip (XML および PNG)
 ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
+ZIPwithJSONAndSWF=Zip (JSON および SWF)
+ZIPwithJSONAndPNG=Zip (JSON および PNG)
+ZIPwithJSONAndPNGs=Zip (JSON および複数の PNG)
 exportscale=書き出し スケール
 ok=OK
 save=保存
