--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -37,11 +37,14 @@ exportLabel=导出:
 allLibraryItems=所有库元件
 selectedItems=选中的库元件
 exportedData=导出的数据(SWF/PNG/Zip)
-SWFwithXML=SWF (包含XML)
-PNGwithXML=PNG (包含XML)
+SWFwithDBData=SWF (包含DBData)
+PNGwithDBData=PNG (包含DBData)
 ZIPwithXMLAndSWF=Zip (XML和SWF)
 ZIPwithXMLAndPNG=Zip (XML和PNG)
 ZIPwithXMLAndPNGs=Zip (XML和分开的PNG)
+ZIPwithJSONAndSWF=Zip (JSON和SWF)
+ZIPwithJSONAndPNG=Zip (JSON和PNG)
+ZIPwithJSONAndPNGs=Zip (JSON和分开的PNG)
 exportscale=导出缩放比
 ok=确定
 save=保存
