refine help window

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -2,6 +2,9 @@
 xml=XML
 copyBehaviors=Copy Behaviors
 textureAtlas=Texture Atlas
+help=Help
+onlineHelp=OnlineHelp
+contactUs=ContactUs
 about=About
 skeleton=Skeleton:
 behaviorList=Behavior List
@@ -35,14 +38,14 @@ exportLabel=Export:
 allLibraryItems=All Library Items
 selectedItems=Selected Items
 exportedData=Exported Data(SWF/PNG/Zip)
-SWFwithDBData=SWF (DBData Merged)
-PNGwithDBData=PNG (DBData Merged)
-ZIPwithXMLAndSWF=Zip (XML and SWF)
-ZIPwithXMLAndPNG=Zip (XML and PNG)
-ZIPwithXMLAndPNGs=Zip (XML and PNGs)
-ZIPwithJSONAndSWF=Zip (JSON and SWF)
-ZIPwithJSONAndPNG=Zip (JSON and PNG)
-ZIPwithJSONAndPNGs=Zip (JSON and PNGs)
+swf=SWF (Data Merged)
+png=PNG (Data Merged)
+swf+xml=Zip (XML + SWF)
+png+xml=Zip (XML + PNG)
+pngs+xml=Zip (XML + PNGs)
+swf+json=Zip (JSON + SWF)
+png+json=Zip (JSON + PNG)
+pngs+json=Zip (JSON + PNGs)
 exportscale=Export Scale
 ok=OK
 save=Save
