--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -2,6 +2,9 @@
 xml=XML
 copyBehaviors=Copie de comportements
 textureAtlas=Atlas des textures
+help=Help
+onlineHelp=OnlineHelp
+contactUs=ContactUs
 about=A propos de
 skeleton=Squelettes:
 behaviorList=Liste de comportements
@@ -35,14 +38,14 @@ exportLabel=Exporter :
 allLibraryItems=Tous les éléments de la bibliothèque
 selectedItems=Eléments sélectionnés
 exportedData=Données exportées (SWF/PNG/Zip)
-SWFwithDBData=SWF (DBData fusionné)
-PNGwithDBData=PNG (DBData fusionné)
-ZIPwithXMLAndSWF=Zip (XML et SWF)
-ZIPwithXMLAndPNG=Zip (XML et PNG)
-ZIPwithXMLAndPNGs=Zip (XML et PNGs)
-ZIPwithJSONAndSWF=Zip (JSON et SWF)
-ZIPwithJSONAndPNG=Zip (JSON et PNG)
-ZIPwithJSONAndPNGs=Zip (JSON et PNGs)
+swf=SWF (Data fusionné)
+png=PNG (Data fusionné)
+swf+xml=Zip (XML + SWF)
+png+xml=Zip (XML + PNG)
+pngs+xml=Zip (XML + PNGs)
+swf+json=Zip (JSON + SWF)
+png+json=Zip (JSON + PNG)
+pngs+json=Zip (JSON + PNGs)
 exportscale=exporter échelle
 ok=OK
 save=Sauver
