--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -2,6 +2,9 @@
 xml=XML
 copyBehaviors=コピーの動作
 textureAtlas=テクスチャアトラス
+help=Help
+onlineHelp=OnlineHelp
+contactUs=ContactUs
 about=情報
 skeleton=骨格:
 behaviorList=動作リスト
@@ -37,14 +40,14 @@ exportLabel=書き出し :
 allLibraryItems=すべてのライブラリアイテム
 selectedItems=選択したアイテム
 exportedData=書き出したデータ (SWF/PNG/Zip)
-SWFwithDBData=SWF (DBData 結合)
-PNGwithDBData=PNG (DBData 結合)
-ZIPwithXMLAndSWF=Zip (XML および SWF)
-ZIPwithXMLAndPNG=Zip (XML および PNG)
-ZIPwithXMLAndPNGs=Zip (XML および複数の PNG)
-ZIPwithJSONAndSWF=Zip (JSON および SWF)
-ZIPwithJSONAndPNG=Zip (JSON および PNG)
-ZIPwithJSONAndPNGs=Zip (JSON および複数の PNG)
+swf=SWF (含むデータ)
+png=PNG (含むデータ)
+swf+xml=Zip (XML + SWF)
+png+xml=Zip (XML + PNG)
+pngs+xml=Zip (XML + PNGs)
+swf+json=Zip (JSON + SWF)
+png+json=Zip (JSON + PNG)
+pngs+json=Zip (JSON + PNGs)
 exportscale=書き出し スケール
 ok=OK
 save=保存
