--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -2,6 +2,9 @@
 xml=XML
 copyBehaviors=复制动作
 textureAtlas=纹理集
+help=帮助
+onlineHelp=在线帮助
+contactUs=联系我们
 about=关于
 skeleton=骨架:
 behaviorList=动作列表
@@ -37,14 +40,14 @@ exportLabel=导出:
 allLibraryItems=所有库元件
 selectedItems=选中的库元件
 exportedData=导出的数据(SWF/PNG/Zip)
-SWFwithDBData=SWF (包含DBData)
-PNGwithDBData=PNG (包含DBData)
-ZIPwithXMLAndSWF=Zip (XML和SWF)
-ZIPwithXMLAndPNG=Zip (XML和PNG)
-ZIPwithXMLAndPNGs=Zip (XML和分开的PNG)
-ZIPwithJSONAndSWF=Zip (JSON和SWF)
-ZIPwithJSONAndPNG=Zip (JSON和PNG)
-ZIPwithJSONAndPNGs=Zip (JSON和分开的PNG)
+swf=SWF (包含数据)
+png=PNG (包含数据)
+swf+xml=Zip (XML + SWF)
+png+xml=Zip (XML + PNG)
+pngs+xml=Zip (XML + PNGs)
+swf+json=Zip (JSON + SWF)
+png+json=Zip (JSON + PNG)
+pngs+json=Zip (JSON + PNGs)
 exportscale=导出缩放比
 ok=确定
 save=保存
