add string for spine data

--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -17,27 +17,30 @@ bone=Os
 behavior=Comportement
 source=Source
 target=Cible
-frameRate=Fréquence d’images :
+frameRate=Fréquence d’images:
 behaviorPanelTitle=Comportement - 
 totalTime=Durées totales(sec):
+totalTimeSec=Durées totales(sec):
+totalTimeScale=Durées totales échelle(%):
 blendingTime=Les temps de mélange(sec):
-keyFrameEase=Accélération image-clé :
-loop=Boucle
+keyFrameEase=Accélération image-clé:
+loop=Boucle:
 play=Lire
 stop=Arrêt
 bonePanelTitle=Os - 
-totalFramesScale=Nombre total d’images (%) :
-playDelay=Temporisation de lecture (%) :
-importLabel=Importer :
+totalFramesScale=images totale échelle(%):
+playDelay=Temporisation de lecture(%):
+importLabel=Importer:
 textureSetting=Paramétrage de la texture
-layoutAlgorithm=Algorithme de présentation :
+layoutAlgorithm=Algorithme de layout:
 size=Taille :
 autoSize=Taille automatique
-padding=Remplissage :
-exportLabel=Exporter :
-allLibraryItems=Tous les éléments de la bibliothèque
+padding=Remplissage:
+exportLabel=Exporter:
+allLibraryItems=Tous éléments de la bibliothèque
 selectedItems=Eléments sélectionnés
-exportedData=Données exportées (SWF/PNG/Zip)
+exportedData=Données exportées(SWF/PNG/Zip)
+spineData=Données Spine(Zip)
 swf=SWF (Data fusionné)
 png=PNG (Data fusionné)
 swf+xml=Zip (XML + SWF)
