--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -17,29 +17,31 @@ bone=ボーン
 behavior=動作
 source=源
 target=目標
-frameRate=フレームレート :
+frameRate=フレームレート:
 behaviorPanelTitle=動作 - 
 totalFrames=タイムズ合計 :
-switchTweenFrames=トゥイーンフレームを切り替え :
-totalTime=合計時間 (秒):
+switchTweenFrames=トゥイーンフレームを切り替え:
+totalTimeSec=合計時間 (秒):
+totalTimeScale=合計時間スケール(%):
 blendingTime=混合時間(秒):
 keyFrameEase=キーフレームのイーズ :
-loop=ループ
+loop=ループ:
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
-totalFramesScale=合計フレームスケール (%) :
-playDelay=再生ディレイ (%) :
+totalFramesScale=合計フレームスケール(%):
+playDelay=再生ディレイ(%):
 importLabel=読み込み :
 textureSetting=テクスチャ設定
 layoutAlgorithm=レイアウトアルゴリズム :
 size=サイズ :
 autoSize=AutoSize
-padding=パディング :
-exportLabel=書き出し :
+padding=パディング:
+exportLabel=書き出し:
 allLibraryItems=すべてのライブラリアイテム
 selectedItems=選択したアイテム
-exportedData=書き出したデータ (SWF/PNG/Zip)
+exportedData=エクスポートされたデータ(SWF/PNG/Zip)
+spineData=Spineのデータ(Zip)
 swf=SWF (含むデータ)
 png=PNG (含むデータ)
 swf+xml=Zip (XML + SWF)
