--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -21,10 +21,11 @@ frameRate=帧频:
 behaviorPanelTitle=动作 - 
 totalFrames=总帧数:
 switchTweenFrames=切换补间帧数:
-totalTime=总时间(秒):
+totalTimeSec=总时间(秒):
+totalTimeScale=总时间缩放(%):
 blendingTime=混合时间(秒):
 keyFrameEase=关键帧缓动:
-loop=循环
+loop=循环:
 play=播放
 stop=停止
 bonePanelTitle=骨骼 - 
@@ -40,6 +41,7 @@ exportLabel=导出:
 allLibraryItems=所有库元件
 selectedItems=选中的库元件
 exportedData=导出的数据(SWF/PNG/Zip)
+spineData=Spine的数据(Zip)
 swf=SWF (包含数据)
 png=PNG (包含数据)
 swf+xml=Zip (XML + SWF)
