--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -19,10 +19,11 @@ source=Source
 target=Target
 frameRate=Frame Rate:
 behaviorPanelTitle=Behavior - 
-totalTime=Total Time(sec):
+totalTimeSec=Total Time(sec):
+totalTimeScale=Total Time Scale(%):
 blendingTime=Blending Time(sec):
 keyFrameEase=Keyframe Ease:
-loop=Loop
+loop=Loop:
 play=Play
 stop=Stop
 bonePanelTitle=Bone - 
@@ -38,6 +39,7 @@ exportLabel=Export:
 allLibraryItems=All Library Items
 selectedItems=Selected Items
 exportedData=Exported Data(SWF/PNG/Zip)
+spineData=Spine Data(Zip)
 swf=SWF (Data Merged)
 png=PNG (Data Merged)
 swf+xml=Zip (XML + SWF)
