--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -3,8 +3,8 @@ xml=XML
 copyBehaviors=Copy Behaviors
 textureAtlas=Texture Atlas
 help=Help
-onlineHelp=OnlineHelp
-contactUs=ContactUs
+onlineHelp=Online Help
+contactUs=Contact Us
 about=About
 skeleton=Skeleton:
 behaviorList=Behavior List
@@ -23,7 +23,7 @@ totalTimeSec=Total Time(sec):
 totalTimeScale=Total Time Scale(%):
 blendingTime=Blending Time(sec):
 keyFrameEase=Keyframe Ease:
-loop=Loop:
+loop=Play Times:
 play=Play
 stop=Stop
 bonePanelTitle=Bone - 
