--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -2,9 +2,9 @@
 xml=XML
 copyBehaviors=Copie de comportements
 textureAtlas=Atlas des textures
-help=Help
-onlineHelp=OnlineHelp
-contactUs=ContactUs
+help=Aide
+onlineHelp=L'aide en ligne
+contactUs=Contactez-nous
 about=A propos de
 skeleton=Squelettes:
 behaviorList=Liste de comportements
@@ -24,7 +24,7 @@ totalTimeSec=Durées totales(sec):
 totalTimeScale=Durées totales échelle(%):
 blendingTime=Les temps de mélange(sec):
 keyFrameEase=Accélération image-clé:
-loop=Boucle:
+loop=Jouez fois:
 play=Lire
 stop=Arrêt
 bonePanelTitle=Os - 
