--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -2,8 +2,8 @@
 xml=XML
 copyBehaviors=コピーの動作
 textureAtlas=テクスチャアトラス
-help=Help
-onlineHelp=OnlineHelp
+help=ヘルプ
+onlineHelp=オンラインヘルプ
 contactUs=ContactUs
 about=情報
 skeleton=骨格:
@@ -25,7 +25,7 @@ totalTimeSec=合計時間 (秒):
 totalTimeScale=合計時間スケール(%):
 blendingTime=混合時間(秒):
 keyFrameEase=キーフレームのイーズ :
-loop=ループ:
+loop=再生回数:
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
