--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -25,7 +25,7 @@ totalTimeSec=总时间(秒):
 totalTimeScale=总时间缩放(%):
 blendingTime=混合时间(秒):
 keyFrameEase=关键帧缓动:
-loop=循环:
+loop=播放次数:
 play=播放
 stop=停止
 bonePanelTitle=骨骼 - 
