--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -4,7 +4,7 @@ copyBehaviors=コピーの動作
 textureAtlas=テクスチャアトラス
 help=ヘルプ
 onlineHelp=オンラインヘルプ
-contactUs=ContactUs
+contactUs=お問い合わせ
 about=情報
 skeleton=骨格:
 behaviorList=動作リスト
