refine localize strings

--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -6,6 +6,7 @@ help=Help
 onlineHelp=Online Help
 contactUs=Contact Us
 about=About
+helpUs=Help Us
 skeleton=Skeleton:
 behaviorList=Behavior List
 boneTree=Bone Tree
