--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -6,6 +6,7 @@ help=Aide
 onlineHelp=L'aide en ligne
 contactUs=Contactez-nous
 about=A propos de
+helpUs=aidez nous
 skeleton=Squelettes:
 behaviorList=Liste de comportements
 boneTree=Arborescence d’os
