--- a/src/locale/en_US/resources.properties
+++ b/src/locale/en_US/resources.properties
@@ -50,6 +50,7 @@ swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
 exportscale=Export Scale
+backgroundColor=Background Color
 ok=OK
 save=Save
 cancel=Cancel
