--- a/src/locale/fr_FR/resources.properties
+++ b/src/locale/fr_FR/resources.properties
@@ -51,6 +51,7 @@ swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
 exportscale=exporter échelle
+backgroundColor=Couleur de fond
 ok=OK
 save=Sauver
 cancel=Annuler
