--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -52,6 +52,7 @@ swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
 exportscale=書き出し スケール
+backgroundColor=背景色
 ok=OK
 save=保存
 cancel=キャンセル
