--- a/src/locale/zh_CN/resources.properties
+++ b/src/locale/zh_CN/resources.properties
@@ -51,6 +51,7 @@ pngs+xml=Zip (XML + PNGs)
 swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
+backgroundColor=背景颜色
 exportscale=导出缩放比
 ok=确定
 save=保存
