--- a/src/locale/ja_JP/resources.properties
+++ b/src/locale/ja_JP/resources.properties
@@ -1,69 +1,69 @@
 ﻿editor=エディター
 xml=XML
-copyBehaviors=コピーの動作
+copyBehaviors=コピー機能
 textureAtlas=テクスチャアトラス
 help=ヘルプ
 onlineHelp=オンラインヘルプ
 contactUs=お問い合わせ
-about=情報
-helpUs=ヘルプ 我ら
-skeleton=骨格:
-behaviorList=動作リスト
+about=DragonBonesについて
+helpUs=HELP US!
+skeleton=スケルトン:
+behaviorList=モーション一覧
 boneTree=ボーンツリー
 textureList=テクスチャリスト
-boneHighlight=ボーンハイライト
+boneHighlight=ボーンハイライト色
 import=読み込み
 export=書き出し
 bone=ボーン
-behavior=動作
-source=源
-target=目標
+behavior=モーション
+source=コピー元
+target=コピー先
 frameRate=フレームレート:
-behaviorPanelTitle=動作 - 
-totalFrames=タイムズ合計 :
+behaviorPanelTitle=モーション - 
+totalFrames=フレーム数:
 switchTweenFrames=トゥイーンフレームを切り替え:
-totalTimeSec=合計時間 (秒):
-totalTimeScale=合計時間スケール(%):
+totalTimeSec=合計時間(秒):
+totalTimeScale=合計時間の倍率(%):
 blendingTime=混合時間(秒):
-keyFrameEase=キーフレームのイーズ :
+keyFrameEase=キーフレームのイージング:
 loop=再生回数:
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
-totalFramesScale=合計フレームスケール(%):
+totalFramesScale=合計フレーム長の倍率(%):
 playDelay=再生ディレイ(%):
-importLabel=読み込み :
+importLabel=読み込み:
 textureSetting=テクスチャ設定
-layoutAlgorithm=レイアウトアルゴリズム :
-size=サイズ :
-autoSize=AutoSize
+layoutAlgorithm=レイアウトアルゴリズム:
+size=サイズ:
+autoSize=自動サイズ設定
 padding=パディング:
 exportLabel=書き出し:
-allLibraryItems=すべてのライブラリアイテム
-selectedItems=選択したアイテム
-exportedData=エクスポートされたデータ(SWF/PNG/Zip)
-spineData=Spineのデータ(Zip)
-swf=SWF (含むデータ)
-png=PNG (含むデータ)
-swf+xml=Zip (XML + SWF)
-png+xml=Zip (XML + PNG)
-pngs+xml=Zip (XML + PNGs)
-swf+json=Zip (JSON + SWF)
-png+json=Zip (JSON + PNG)
-pngs+json=Zip (JSON + PNGs)
-exportscale=書き出し スケール
+allLibraryItems=全てのライブラリアイテム
+selectedItems=選択したライブラリアイテム
+exportedData=書き出し済みファイル(SWF/PNG/Zip)
+spineData=Spineデータ(Zip)
+swf=SWF(データを含む)
+png=PNG(データを含む)
+swf+xml=Zip(XML + SWF)
+png+xml=Zip(XML + PNG)
+pngs+xml=Zip(XML + 複数PNG)
+swf+json=Zip(JSON + SWF)
+png+json=Zip(JSON + PNG)
+pngs+json=Zip(JSON + 複数PNG)
+exportscale=書き出しの倍率
 backgroundColor=背景色
 ok=OK
 save=保存
 cancel=キャンセル
-importFLAWaitting=読み込み中...\r読込みが終了するまでお待ちください。
-importNoElement=Fla {0} のライブラリに骨格アイテムが見つかりません。
-importSkeletonProgress=骨格を読み込み : {0} / {1}
-importTextureProgress=テクスチャを読み込み : {0} / {1}
+importFLAWaitting=読み込み中...\r読込みが完了するまでお待ちください。
+importNoElement=Fla {0} のライブラリにスケルトンが見つかりません。
+importSkeletonProgress=スケルトンの読み込み : {0} / {1}
+importTextureProgress=テクスチャの読み込み : {0} / {1}
 importFileWaitting=読み込み中...
-importFileError=読込みに失敗しました。\r不明なデータ形式エラーです。
+importFileError=読込みに失敗しました。\r不明なデータ形式です。
 importFileProgress=読み込みの進行状況 : {0} %
-exportWaitting=書き出し...\r書き出しが終了するまでお待ちください。
+exportWaitting=書き出し...\r書き出しが完了するまでお待ちください。
 exportError=書き出しに失敗しました。\rデータの書き込み中に不明なエラーが発生しました。
-contactUsBy={0} で問い合わせ
-copyright=Copyright 2012-2013 DragonBones チームおよびその他の貢献者
+contactUsBy={0} に問い合わせ
+copyright=Copyright 2012-2013 DragonBonesチーム および その他のContributor
