add more localization items

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -25,6 +25,7 @@ totalTimeScale=Total Time Scale(%):
 blendingTime=Blending Time(sec):
 keyFrameEase=Keyframe Ease:
 loop=Play Times:
+autotween=Auto Tween
 play=Play
 stop=Stop
 bonePanelTitle=Bone - 
@@ -63,14 +64,15 @@ importFileTypeSelection=ImportFileType:
 fadeInTime=FadeInTime:
 millisecond=ms
 pixel=px
-dataFormat=DataFormat:
-textureFormat=TextureFormat:
+dataFormat=Data Format:
+textureFormat=Texture Format:
 startBatchProcess=StartBatchProcess
-textureAtlasPath=TextureAtlasPath:
-skeletonDataFileName=SkeletonDataFileName:
-textureDataFileName=TextureDataFileName:
-textureFileName=TextureFileName:
-skeletonDataName=SkeletonDataName:
+textureAtlasPath=Texture Atlas Path:
+skeletonDataFileName=Skeleton Data File Name:
+textureDataFileName=Texture Data File Name:
+textureFileName=Texture File Name:
+subTextureFolderName=Textures' Folder Name:
+skeletonDataName=Skeleton Data Name:
 advanced=Advanced
 source=Source:
 animation=Animation
