--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -26,6 +26,7 @@ totalTimeScale=Durées totales échelle(%):
 blendingTime=Les temps de mélange(sec):
 keyFrameEase=Accélération image-clé:
 loop=Jouez fois:
+autotween=Automatique Tween
 play=Lire
 stop=Arrêt
 bonePanelTitle=Os - 
@@ -64,14 +65,17 @@ importFileTypeSelection=ImportFileType:
 fadeInTime=FadeInTime:
 millisecond=ms
 pixel=px
-dataFormat=DataFormat:
-textureFormat=TextureFormat:
+
+dataFormat=Data Format:
+textureFormat=Texture Format:
 startBatchProcess=StartBatchProcess
-textureAtlasPath=TextureAtlasPath:
-skeletonDataFileName=SkeletonDataFileName:
-textureDataFileName=TextureDataFileName:
-textureFileName=TextureFileName:
-skeletonDataName=SkeletonDataName:
+textureAtlasPath=Texture Atlas Path:
+skeletonDataFileName=Skeleton Data File Name:
+textureDataFileName=Texture Data File Name:
+textureFileName=Texture File Name:
+subTextureFolderName=Textures' Folder Name:
+skeletonDataName=Skeleton Data Name:
+
 advanced=Advanced
 source=Source:
 animation=Animation
