--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -27,6 +27,7 @@ totalTimeScale=合計時間の倍率(%):
 blendingTime=混合時間(秒):
 keyFrameEase=キーフレームのイージング:
 loop=再生回数:
+autotween=
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
@@ -65,14 +66,17 @@ importFileTypeSelection=ImportFileType:
 fadeInTime=FadeInTime:
 millisecond=ms
 pixel=px
-dataFormat=DataFormat:
-textureFormat=TextureFormat:
+
+dataFormat=データフォーマット:
+textureFormat=Texture Format:テクスチャフォーマット
 startBatchProcess=StartBatchProcess
-textureAtlasPath=TextureAtlasPath:
-skeletonDataFileName=SkeletonDataFileName:
-textureDataFileName=TextureDataFileName:
-textureFileName=TextureFileName:
-skeletonDataName=SkeletonDataName:
+textureAtlasPath=テクスチャアトラスのパス:
+skeletonDataFileName=スケルトンデータファイル名:
+textureDataFileName=テクスチャデータのファイル名:
+textureFileName=テクスチャファイル名:
+subTextureFolderName=テクスチャ「フォルダ名:
+skeletonDataName=スケルトンデータ名:
+
 advanced=Advanced
 source=Source:
 animation=Animation
