--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -27,6 +27,7 @@ totalTimeScale=总时间缩放(%):
 blendingTime=混合时间(秒):
 keyFrameEase=关键帧缓动:
 loop=播放次数:
+autotween=自动补间
 play=播放
 stop=停止
 bonePanelTitle=骨骼 - 
@@ -65,6 +66,7 @@ importFileTypeSelection=导入类型选择:
 fadeInTime=动作淡入时间:
 millisecond=毫秒
 pixel=像素
+
 dataFormat=数据格式:
 textureFormat=纹理格式:
 startBatchProcess=开始批处理
@@ -72,7 +74,9 @@ textureAtlasPath=纹理集路径:
 skeletonDataFileName=骨架数据文件名:
 textureDataFileName=纹理数据文件名:
 textureFileName=纹理文件名:
+subTextureFolderName=纹理文件夹名:
 skeletonDataName=骨架数据名:
+
 advanced=高级
 source=源：
 animation=动画
